[gd_scene load_steps=15 format=2]

[ext_resource path="res://Hud/ChestEmptyTile64x64.png" type="Texture" id=1]
[ext_resource path="res://Slot1.gd" type="Script" id=2]
[ext_resource path="res://Test_zapisu.gd" type="Script" id=3]
[ext_resource path="res://Hud/ExitArrowChestCraft.png" type="Texture" id=4]
[ext_resource path="res://Hud/ChestHUD.png" type="Texture" id=5]
[ext_resource path="res://Styles/GuzikKuchenka.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/GuzikKuchenka_Wcisniety.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/TloKuchenka.tres" type="StyleBox" id=8]
[ext_resource path="res://Hud/AvatarHUD.png" type="Texture" id=9]
[ext_resource path="res://Hud/HP_frame.png" type="Texture" id=10]
[ext_resource path="res://Hud/HP_progres.png" type="Texture" id=11]
[ext_resource path="res://Hud/Food_progres.png" type="Texture" id=12]
[ext_resource path="res://Hud/HP_down.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Skrzynia" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.01
margin_bottom = 720.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Gracz" type="Sprite" parent="TextureRect"]
position = Vector2( 149.871, 50.257 )
texture = ExtResource( 9 )

[node name="Hp" type="TextureProgress" parent="TextureRect/Gracz"]
margin_left = -49.0
margin_top = -47.0
margin_right = 147.0
margin_bottom = -29.0
value = 100.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numer_hp" type="Label" parent="TextureRect/Gracz/Hp"]
margin_right = 196.0
margin_bottom = 18.0
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="TextureProgress" parent="TextureRect/Gracz"]
margin_left = -49.0
margin_top = -26.0
margin_right = 105.0
margin_bottom = -13.0
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numer_food" type="Label" parent="TextureRect/Gracz/Food"]
margin_right = 154.0
margin_bottom = 13.0
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="GridContainer" type="Control" parent="."]
margin_left = -30.0019
margin_top = 7.52015
margin_right = 9.99813
margin_bottom = 47.5202
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="GridContainer"]
margin_left = 238.001
margin_top = 360.0
margin_right = 302.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="GridContainer"]
margin_left = 318.001
margin_top = 360.0
margin_right = 382.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot3" type="Panel" parent="GridContainer"]
margin_left = 398.001
margin_top = 360.0
margin_right = 462.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot4" type="Panel" parent="GridContainer"]
margin_left = 478.001
margin_top = 360.0
margin_right = 542.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot5" type="Panel" parent="GridContainer"]
margin_left = 558.001
margin_top = 360.0
margin_right = 622.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot6" type="Panel" parent="GridContainer"]
margin_left = 638.001
margin_top = 360.0
margin_right = 702.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot7" type="Panel" parent="GridContainer"]
margin_left = 718.001
margin_top = 360.0
margin_right = 782.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot8" type="Panel" parent="GridContainer"]
margin_left = 798.001
margin_top = 360.0
margin_right = 862.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot9" type="Panel" parent="GridContainer"]
margin_left = 878.001
margin_top = 360.0
margin_right = 942.001
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot10" type="Panel" parent="GridContainer"]
margin_left = 958.001
margin_top = 360.0
margin_right = 1022.0
margin_bottom = 424.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot11" type="Panel" parent="GridContainer"]
margin_left = 238.001
margin_top = 440.0
margin_right = 302.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot12" type="Panel" parent="GridContainer"]
margin_left = 318.001
margin_top = 440.0
margin_right = 382.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot13" type="Panel" parent="GridContainer"]
margin_left = 398.001
margin_top = 440.0
margin_right = 462.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot14" type="Panel" parent="GridContainer"]
margin_left = 478.001
margin_top = 440.0
margin_right = 542.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot15" type="Panel" parent="GridContainer"]
margin_left = 558.001
margin_top = 440.0
margin_right = 622.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot16" type="Panel" parent="GridContainer"]
margin_left = 638.001
margin_top = 440.0
margin_right = 702.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot17" type="Panel" parent="GridContainer"]
margin_left = 718.001
margin_top = 440.0
margin_right = 782.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot18" type="Panel" parent="GridContainer"]
margin_left = 798.001
margin_top = 440.0
margin_right = 862.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot19" type="Panel" parent="GridContainer"]
margin_left = 878.001
margin_top = 440.0
margin_right = 942.001
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot20" type="Panel" parent="GridContainer"]
margin_left = 958.001
margin_top = 440.0
margin_right = 1022.0
margin_bottom = 504.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot21" type="Panel" parent="GridContainer"]
margin_left = 398.001
margin_top = 188.346
margin_right = 462.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot22" type="Panel" parent="GridContainer"]
margin_left = 478.001
margin_top = 188.346
margin_right = 542.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot23" type="Panel" parent="GridContainer"]
margin_left = 558.001
margin_top = 188.346
margin_right = 622.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot24" type="Panel" parent="GridContainer"]
margin_left = 638.001
margin_top = 188.346
margin_right = 702.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot25" type="Panel" parent="GridContainer"]
margin_left = 718.001
margin_top = 188.346
margin_right = 782.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot26" type="Panel" parent="GridContainer"]
margin_left = 798.001
margin_top = 188.346
margin_right = 862.001
margin_bottom = 252.346
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0168991, 0.0980988 )
z_index = 2

[node name="Warning" type="Panel" parent="Sprite"]
self_modulate = Color( 0.309804, 0.262745, 0.262745, 0.501961 )
margin_left = 1280.03
margin_top = 7.42206
margin_right = 2560.03
margin_bottom = 727.422
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Panel" parent="Sprite/Warning"]
self_modulate = Color( 0.278431, 0.25098, 0.286275, 1 )
margin_left = 480.0
margin_top = 270.0
margin_right = 800.0
margin_bottom = 440.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zjedz" type="Button" parent="Sprite/Warning/W"]
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 90.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Zjedz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Usun" type="Button" parent="Sprite/Warning/W"]
margin_left = 32.0
margin_top = 90.0
margin_right = 160.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Usun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wroc" type="Button" parent="Sprite/Warning/W"]
margin_left = 160.0
margin_top = 90.0
margin_right = 288.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Wroc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 1152.0
margin_top = 88.0758
margin_right = 1216.0
margin_bottom = 120.076
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Sprite/Warning/W/Zjedz" to="." method="_on_Zjedz_pressed"]
[connection signal="pressed" from="Sprite/Warning/W/Usun" to="." method="_on_Usun_pressed"]
[connection signal="pressed" from="Sprite/Warning/W/Wroc" to="." method="_on_Wroc_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
